# reorganized_lithospheric_biomass

./: .gitignore  README.md  pyproject.toml
data/raw/mast/: CRU_mean_temperature_mon_1x1_global_2019_v4.03.nc
data/raw/oceanic/: oceanic_cell_densities.xlsx
figures/benchmarks/volume/: global_depth_to_122.eps
scripts/continental/modified_magnabosco/: Crust_Specific_Fits_wenyu.R  Depth_and_Temperature_Fits_wenyu.R  Depth_and_Temperature_GLM_wenyu.R
scripts/continental/original_magnabosco/: Crust_Specific_Fits_origin.R  Depth_and_Temperature_Fits_origin.R  Depth_and_Temperature_GLM_origin.R
scripts/geothermal/: baseline_xgboost.py  plot_feature_analysis.py
scripts/oceanic/: plot_cell_density_violin.py  stratified_cellcount.py  stratified_power_fit.py  tab_file_processor.py  unstratified_cellcount.py  unstratified_power_fit.py
scripts/sensitivity/: summarize_oceanic_geothermal_z122_uncertainty.py
scripts/volume/: habitable_volume.py  process_mast_file.py
src/biomass/: __init__.py
src/biomass/continental/: __init__.py
src/biomass/geothermal/: __init__.py  baseline_xgboost.py  plot_feature_analysis.py  plotting.py
src/biomass/io/: __init__.py
src/biomass/oceanic/: __init__.py  oceanic_celldensity_violin.py  stratified_oceanic_cellcount_estimation.py  stratified_power_fit.py  tab_file_processor.py  unstratified_oceanic_cellcount_estimation.py  unstratified_power_fit.py
src/biomass/volume/: __init__.py  (+3 more)
tests/: test_continental_biomass_workflow.py  test_geothermal_gradient_workflow.py  test_oceanic_biomass_workflow.py  test_volume_workflow.py
(+8 files in other folders)
