[project]
name = "lithospheric-biomass"
version = "0.1.0"
description = "Geothermal-gradient, habitable-volume, and lithospheric biomass workflows for rock-hosted subsurface biomass estimates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cartopy>=0.22",
    "basemap>=1.3",
    "global-land-mask>=1.0",
    "matplotlib>=3.7",
    "netCDF4>=1.6",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pytest>=7.4",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "xarray>=2023.1",
    "xgboost>=2.0",
]

[project.optional-dependencies]
download = [
    "cdsapi>=0.7",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/biomass"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
